#192: Some code cleanup.
Signed-off-by: Franz Wilhelmstötter <franz.wilhelmstoetter@gmail.com>